// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`floatingToolbar() mediaGroup should not return media group items if allowMediaInline is false 1`] = `
Array [
  Object {
    "appearance": "danger",
    "focusEditoronEnter": true,
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;

exports[`floatingToolbar() mediaGroup should return media group items 1`] = `
Array [
  Object {
    "id": "editor.media.view.switcher",
    "options": Array [
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.inline",
        "onClick": [Function],
        "selected": false,
        "testId": "inline-appearance",
        "title": "Display inline",
      },
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.thumbnail",
        "onClick": [Function],
        "selected": true,
        "testId": "thumbnail-appearance",
        "title": "Display thumbnail",
      },
    ],
    "title": "Change view",
    "type": "dropdown",
  },
  Object {
    "type": "separator",
  },
  Object {
    "fallback": Array [],
    "render": [Function],
    "type": "custom",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.card.download",
    "onClick": [Function],
    "title": "Download",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "appearance": "danger",
    "focusEditoronEnter": true,
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;

exports[`floatingToolbar() mediaInline should return media inline items 1`] = `
Array [
  Object {
    "id": "editor.media.view.switcher",
    "options": Array [
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.inline",
        "onClick": [Function],
        "selected": true,
        "testId": "inline-appearance",
        "title": "Display inline",
      },
      Object {
        "disabled": false,
        "id": "editor.media.view.switcher.thumbnail",
        "onClick": [Function],
        "selected": false,
        "testId": "thumbnail-appearance",
        "title": "Display thumbnail",
      },
    ],
    "title": "Change view",
    "type": "dropdown",
  },
  Object {
    "type": "separator",
  },
  Object {
    "fallback": Array [],
    "render": [Function],
    "type": "custom",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.card.download",
    "onClick": [Function],
    "title": "Download",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "appearance": "danger",
    "focusEditoronEnter": true,
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;

exports[`floatingToolbar() mediaSingle should return media single items 1`] = `
Array [
  Object {
    "icon": [Function],
    "id": "editor.media.alignLeft",
    "onClick": [Function],
    "selected": false,
    "title": "Align left",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.alignCenter",
    "onClick": [Function],
    "selected": true,
    "title": "Align center",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.alignRight",
    "onClick": [Function],
    "selected": false,
    "title": "Align right",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.wrapLeft",
    "onClick": [Function],
    "selected": false,
    "title": "Wrap left",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.wrapRight",
    "onClick": [Function],
    "selected": false,
    "title": "Wrap right",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": undefined,
    "onClick": [Function],
    "selected": false,
    "title": "Go wide",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": undefined,
    "onClick": [Function],
    "selected": false,
    "title": "Go full width",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "appearance": "danger",
    "focusEditoronEnter": true,
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;

exports[`floatingToolbar() mediaSingle should return media single items with border option 1`] = `
Array [
  Object {
    "fallback": Array [],
    "render": [Function],
    "type": "custom",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.alignLeft",
    "onClick": [Function],
    "selected": false,
    "title": "Align left",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.alignCenter",
    "onClick": [Function],
    "selected": true,
    "title": "Align center",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.alignRight",
    "onClick": [Function],
    "selected": false,
    "title": "Align right",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.wrapLeft",
    "onClick": [Function],
    "selected": false,
    "title": "Wrap left",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": "editor.media.wrapRight",
    "onClick": [Function],
    "selected": false,
    "title": "Wrap right",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "icon": [Function],
    "id": undefined,
    "onClick": [Function],
    "selected": false,
    "title": "Go wide",
    "type": "button",
  },
  Object {
    "icon": [Function],
    "id": undefined,
    "onClick": [Function],
    "selected": false,
    "title": "Go full width",
    "type": "button",
  },
  Object {
    "type": "separator",
  },
  Object {
    "appearance": "danger",
    "focusEditoronEnter": true,
    "icon": [Function],
    "id": "editor.media.delete",
    "onBlur": [Function],
    "onClick": [Function],
    "onFocus": [Function],
    "onMouseEnter": [Function],
    "onMouseLeave": [Function],
    "testId": "media-toolbar-remove-button",
    "title": "Remove",
    "type": "button",
  },
]
`;
